MLOps_Full_End_to_End_ML_API/.k8s/overlays/prod/patch-deployment-project.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-prod
spec:
  template:
    spec:
      containers:
        - name: project
          image: w255mids.azurecr.io/maila/project:78e8ca1
          resources:
            requests:
              cpu: 500m
              memory: 1500Mi
            limits:
              cpu: 1000m
              memory: 1500Mi
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 1
            periodSeconds: 3
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
