MLOps_Full_End_to_End_ML_API/.k8s/overlays/prod/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: project
spec:
  hosts:
    - maila.mids255.com
  gateways:
    - istio-ingress/maila-gateway
  http:
    - match:
        - uri:
            exact: /predict
        - uri:
            prefix: /health
        - uri:
            prefix: /docs
        - uri:
            prefix: /openapi.json
      route:
        - destination:
            host: project
            port:
              number: 8000
